Update crud endpoints, implement create and get single user
